examples/test/testpolicy10846.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10846
  namespace: namespace35
spec:
  podSelector:
    matchLabels:
      key9: value16
      key29: value24
      key44: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value37
          key3: value25
          key10: value31
      podSelector:
        matchLabels:
          key35: value11
          key49: value33
